# mv-pycentral

./: .gitignore  .readthedocs.yml  LICENSE  README.md  RELEASE-NOTES.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: publish.yaml  publish.yml  release.yaml
docs/: index.md  requirements.txt
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/modules/: base.md  classic.md  exceptions.md  glp.md  msp.md  new_monitoring.md  profiles.md  scopes.md  streaming.md  troubleshooting.md  utils.md
docs/stylesheets/: extra.css
pycentral/: __init__.py  base.py
pycentral/classic/: base.py
pycentral/exceptions/: __init__.py  generic_op_error.py  login_error.py  parameter_error.py  pycentral_error.py  response_error.py  unsupported_capability_error.py  verification_error.py
pycentral/glp/: devices.py  subscriptions.py
pycentral/msp/: __init__.py  msp_base.py  tenant_base.py
pycentral/new_monitoring/: __init__.py  aps.py  clients.py  devices.py  gateways.py  sites.py  switches.py
pycentral/profiles/: profiles.py
pycentral/scopes/: device.py  scope_base.py  scope_maps.py  scopes.py  site.py
pycentral/streaming/: streaming.py
pycentral/streaming/events/ap_events/: ap_events_pb2.py  ap_events_pb2.pyi
pycentral/troubleshooting/: troubleshooting.md  troubleshooting.py
pycentral/utils/: __init__.py  base_utils.py  common_utils.py  constants.py  monitoring_utils.py  profile_utils.py  scope_utils.py  url_utils.py
